RESOLVED FIXED193289
[WebGPU] Fix vertex-buffer-triangle-strip test and small update to GPURenderPipeline
https://bugs.webkit.org/show_bug.cgi?id=193289
Summary [WebGPU] Fix vertex-buffer-triangle-strip test and small update to GPURenderP...
Justin Fan
Reported 2019-01-09 11:19:23 PST
[WebGPU] Fix vertex-buffer-triangle-strip test and small update to GPURenderPipeline
Attachments
Patch (5.38 KB, patch)
2019-01-09 11:24 PST, Justin Fan
no flags
Justin Fan
Comment 1 2019-01-09 11:24:02 PST
Radar WebKit Bug Importer
Comment 2 2019-01-09 11:28:03 PST
WebKit Commit Bot
Comment 3 2019-01-09 12:05:17 PST
Comment on attachment 358717 [details] Patch Clearing flags on attachment: 358717 Committed r239780: <https://trac.webkit.org/changeset/239780>
WebKit Commit Bot
Comment 4 2019-01-09 12:05:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.