[WebGPU] Fix vertex-buffer-triangle-strip test and small update to GPURenderPipeline https://bugs.webkit.org/show_bug.cgi?id=193289

Reviewed by Dean Jackson.

Source/WebCore:

Fix broken test after pipeline layouts were added, and a small refactoring to GPURenderPipeline to avoid
retaining its descriptor after creation.

* platform/graphics/gpu/GPURenderPipeline.h:
(WebCore::GPURenderPipeline::primitiveTopology const):
* platform/graphics/gpu/cocoa/GPURenderPipelineMetal.mm:
(WebCore::GPURenderPipeline::GPURenderPipeline):

LayoutTests:

Fix broken test after pipeline layouts were added.

* webgpu/js/webgpu-functions.js:
(createBasicPipeline): Ensure pipeline layout is actually optional.
* webgpu/vertex-buffer-triangle-strip.html:


Canonical link: https://commits.webkit.org/207787@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239780 268f45cc-cd09-0410-ab3c-d52691b4dbfc